# Yoga

./: .flake8  .gitignore  .releaserc.json  COMMIT_CONVENTIONS.md  README.md  conftest_admin.py  conftest_app.py  db_check.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  notify-aggregator.yml  release.yml  semantic-release.yml  yoga-ci-cd.yml  yoga-ci.yml
admin/: admin.py  models.py  requirements.txt
admin/backend/: Dockerfile  __init__.py  main.py  requirements.txt  routes.py
admin/frontend/: package-lock.json  package.json
application/backend/: Dockerfile  insert.py  main.py  requirements.txt  routes.py  run_insert.sh
application/frontend/: Dockerfile  package-lock.json  package.json
auth/backend/: Dockerfile  requirements.txt
auth/backend/alembic/: env.py
auth/backend/app/: auth_service.py  config.py  database.py  main.py  models.py  routes.py  utilits.py
auth/frontend/: package-lock.json  package.json
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
monitoring/: README.md
monitoring/efk/: docker-compose.yml
monitoring/efk/fluentd/: Dockerfile
monitoring/prometheus-grafana/: docker-compose.yml
monitoring/prometheus-grafana/alertmanager/: config.yml
monitoring/sentry/: docker-compose.yml
nginx/: nginx.conf
tests/admin/: conftest.py  test_group.py  test_service.py  test_timeslots.py  test_trainer.py
tests/app/: conftest.py  test_routes.py
utils/: config.py  database.py  metrics.py  models.py
utils/alembic/: env.py
(+11 files in other folders)
