[project]
name = "your-project"
version = "0.1.0"

[tool.ruff]
line-length = 79

# Все настройки линтинга переносим в подсекцию `lint`
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = []

# Настройки сортировки импортов (isort)
[tool.ruff.lint.isort]
known-first-party = ["utils"]
lines-between-types = 1
combine-as-imports = true
split-on-trailing-comma = true
order-by-type = true

# Настройки Black
[tool.black]
line-length = 79
target-version = ["py312"]
skip-string-normalization = true

# Настройки pytest (опционально)
[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]